--- a/Messaging.Client/02.Messaging.Client.csproj
+++ b/Messaging.Client/02.Messaging.Client.csproj
@@ -47,23 +47,20 @@
     <Compile Include="..\AssemblyInfo.solution.cs">
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
+    <Compile Include="Client\AsyncCommand.cs" />
+    <Compile Include="Client\AsyncExecutionTaskStartedEventArgs.cs" />
     <Compile Include="Client\TransactionalEventBuffer.T1.cs" />
     <Compile Include="Properties\AssemblyInfo.project.cs" />
-    <Compile Include="Client\CommandDispatcherCommand.cs" />
-    <Compile Include="Client\CommandDispatcherCommand.T1.cs" />
     <Compile Include="Client\ClientEventBus.cs" />
     <Compile Include="Client\ClientEventBusConnection.cs" />
-    <Compile Include="Client\QueryDispatcherCommand.T1.cs" />
-    <Compile Include="Client\QueryDispatcherCommand.T2.cs" />
-    <Compile Include="Client\RequestDispatcherCommand.T2.cs" />
-    <Compile Include="Client\CommandExecutionOptions.cs" />
+    <Compile Include="Client\AsyncCommand.T1.cs" />
+    <Compile Include="Client\AsyncCommandOptions.cs" />
     <Compile Include="Client\CompositeHasChangesIndicator.cs" />
     <Compile Include="Client\CompositeIsBusyIndicator.cs" />
     <Compile Include="Client\CompositeIsValidIndicator.cs" />
     <Compile Include="Client\CompositeMessage.cs" />
     <Compile Include="Client\IRequestDispatcherCommand.cs" />
     <Compile Include="Client\ICompositeCommand.cs" />
-    <Compile Include="Client\IIsBusyIndicator.cs" />
     <Compile Include="Client\OneToManyCommand.cs" />
     <Compile Include="Client\OneToManyCommandConnection.cs" />
     <Compile Include="Client\OneToOneCommand.cs" />
