--- a/Messaging/04.Messaging.csproj
+++ b/Messaging/04.Messaging.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
@@ -57,8 +58,10 @@
     <Compile Include="Client\CommandExecutionTask.cs" />
     <Compile Include="Client\IAsyncExecutionTask.cs" />
     <Compile Include="Client\IIsBusyIndicator.cs" />
+    <Compile Include="Client\ObjectCacheExtensions.cs" />
+    <Compile Include="Server\CompositeConnection.cs" />
     <Compile Include="Server\IProgressReporter.cs" />
-    <Compile Include="Client\MessageBasedLifetime.cs" />
+    <Compile Include="Client\EventMonitor.cs" />
     <Compile Include="Server\Progress.cs" />
     <Compile Include="Server\ProgressChangedEventArgs.cs" />
     <Compile Include="Client\ProgressReporter.cs" />
@@ -73,24 +76,15 @@
     <Compile Include="Client\ExecutionSucceededEventArgs.cs" />
     <Compile Include="Client\ExecutionSucceededEventArgs.T1.cs" />
     <Compile Include="Client\ICommandDispatcher.cs" />
-    <Compile Include="Client\InfiniteLifetime.cs" />
     <Compile Include="InvalidCommandException.cs" />
     <Compile Include="Client\IQueryDispatcher.T1.cs" />
     <Compile Include="Client\IRequestDispatcher.cs" />
-    <Compile Include="Client\MemoryCache.cs" />
     <Compile Include="Client\MessageStateTracker.cs" />
-    <Compile Include="Client\OrLifetime.cs" />
-    <Compile Include="Client\QueryCache.cs" />
-    <Compile Include="Client\QueryCacheValue.cs" />
-    <Compile Include="Client\QueryCacheValueExpiredEventArgs.cs" />
-    <Compile Include="Client\QueryCacheValueLifetime.cs" />
     <Compile Include="Client\QueryDispatcher.T1.cs" />
     <Compile Include="Client\QueryDispatcher.T2.cs" />
     <Compile Include="Client\QueryDispatcherBase.T1.cs" />
     <Compile Include="Client\SynchronizationContextScope.cs" />
     <Compile Include="Client\RequestDispatcher.cs" />
-    <Compile Include="Client\SlidingWindowLifetime.cs" />
-    <Compile Include="Client\TimerBasedLifetime.cs" />
     <Compile Include="Server\AggregateSet.T3.cs" />
     <Compile Include="Server\EventBuffer.T3.cs" />
     <Compile Include="Server\Aggregate.T2.cs" />
@@ -131,7 +125,6 @@
     <Compile Include="Server\MessageProcessorBusConnection.cs" />
     <Compile Include="Server\MessageProcessorBusConnectionForAction.T1.cs" />
     <Compile Include="Server\MessageProcessorBusConnectionForInterface.T1.cs" />
-    <Compile Include="Server\MessageProcessorBusRelay.cs" />
     <Compile Include="Server\UseCase.cs" />
     <Compile Include="Server\ScopeSpecificCacheEntry.T1.cs" />
     <Compile Include="Server\ScopeSpecificCacheRelay.cs" />
