--- a/Messaging.Client.Tests/01.Messaging.Client.Tests.csproj
+++ b/Messaging.Client.Tests/01.Messaging.Client.Tests.csproj
@@ -39,6 +39,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Transactions" />
   </ItemGroup>
   <Choose>
