- Removed Transaction-awareness from Client-code. - Extended Test-framework with MessageTester.

--- a/Messaging.TestEngine.Tests/01.Messaging.TestEngine.Tests.csproj
+++ b/Messaging.TestEngine.Tests/01.Messaging.TestEngine.Tests.csproj
@@ -70,6 +70,7 @@
     <Compile Include="..\AssemblyInfo.solution.cs">
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
+    <Compile Include="MSTestFramework.cs" />
     <Compile Include="Server\BooleanOperandExtensionsTest.cs" />
     <Compile Include="Server\ComparableOperandExtensionsTest.cs" />
     <Compile Include="Server\NullableOperandExtensionsTest.cs" />
