--- a/Messaging.TestEngine/02.Messaging.TestEngine.csproj
+++ b/Messaging.TestEngine/02.Messaging.TestEngine.csproj
@@ -56,6 +56,9 @@
     <Compile Include="..\AssemblyInfo.solution.cs">
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
+    <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="IUnitTestFramework.cs" />
+    <Compile Include="MessageTester.cs" />
     <Compile Include="Server\BooleanOperandExtensions.cs" />
     <Compile Include="Server\ConjunctionStatement.T1.cs" />
     <Compile Include="Resources\ExceptionMessages.Designer.cs">
