- Removed MessageHandlerPipeline code. - Added simpler IMessagePipeline-interface and -class.

--- a/Messaging/04.Messaging.csproj
+++ b/Messaging/04.Messaging.csproj
@@ -60,15 +60,16 @@
     <Compile Include="Client\IIsBusyIndicator.cs" />
     <Compile Include="Client\ObjectCacheExtensions.cs" />
     <Compile Include="Server\CompositeConnection.cs" />
+    <Compile Include="Server\IMessagePipeline.cs" />
     <Compile Include="Server\IProgressReporter.cs" />
     <Compile Include="Client\EventMonitor.cs" />
+    <Compile Include="Server\MessagePipeline.cs" />
     <Compile Include="Server\Progress.cs" />
     <Compile Include="Server\ProgressChangedEventArgs.cs" />
     <Compile Include="Client\ProgressReporter.cs" />
     <Compile Include="Client\QueryExecutionTask.cs" />
     <Compile Include="Client\AsyncExecutionTaskStatus.cs" />
     <Compile Include="Server\AggregateNotFoundException.cs" />
-    <Compile Include="Server\CommandHandler.T1.cs" />
     <Compile Include="Client\ExecutionCanceledEventArgs.cs" />
     <Compile Include="Client\ExecutionCompletedEventArgs.cs" />
     <Compile Include="Client\ExecutionFailedEventArgs.cs" />
@@ -76,7 +77,7 @@
     <Compile Include="Client\ExecutionSucceededEventArgs.cs" />
     <Compile Include="Client\ExecutionSucceededEventArgs.T1.cs" />
     <Compile Include="Client\ICommandDispatcher.cs" />
-    <Compile Include="InvalidCommandException.cs" />
+    <Compile Include="InvalidMessageException.cs" />
     <Compile Include="Client\IQueryDispatcher.T1.cs" />
     <Compile Include="Client\IRequestDispatcher.cs" />
     <Compile Include="Client\MessageStateTracker.cs" />
@@ -107,19 +108,12 @@
     <Compile Include="IConnection.cs" />
     <Compile Include="CancellationTokenExtensions.cs" />
     <Compile Include="Server\IMessageHandler.T1.cs" />
-    <Compile Include="Server\IMessageHandlerPipeline.T1.cs" />
-    <Compile Include="Server\IMessageHandlerPipelineFactory.cs" />
     <Compile Include="Server\IMessageProcessor.cs" />
     <Compile Include="Server\IMessageProcessorBus.cs" />
     <Compile Include="Server\InstanceLifetime.cs" />
     <Compile Include="Server\InstanceLifetimeAttribute.cs" />
     <Compile Include="Server\MessageHandlerClass.cs" />
     <Compile Include="Server\MessageHandlerFactory.cs" />
-    <Compile Include="Server\MessageHandlerPipeline.T1.cs" />
-    <Compile Include="Server\MessageHandlerPipelineDecorator.T1.cs" />
-    <Compile Include="Server\MessageHandlerPipelineForAction.T1.cs" />
-    <Compile Include="Server\MessageHandlerPipelineForClass.T1.cs" />
-    <Compile Include="Server\MessageHandlerPipelineForInterface.T1.cs" />
     <Compile Include="Server\MessageProcessor.cs" />
     <Compile Include="Server\MessageProcessorBus.cs" />
     <Compile Include="Server\MessageProcessorBusConnection.cs" />
