--- a/Messaging/04.Messaging.csproj
+++ b/Messaging/04.Messaging.csproj
@@ -52,13 +52,17 @@
     </Compile>
     <Compile Include="Client\AsyncExecutionTask.T1.cs" />
     <Compile Include="Client\AsyncObject.cs" />
+    <Compile Include="Client\CommandDelegate.T1.cs" />
     <Compile Include="Client\CommandDispatcher.cs" />
     <Compile Include="Client\CommandDispatcher.T1.cs" />
     <Compile Include="Client\CommandDispatcherBase.cs" />
+    <Compile Include="Client\CommandDelegate.cs" />
     <Compile Include="Client\CommandExecutionTask.cs" />
     <Compile Include="Client\IAsyncExecutionTask.cs" />
     <Compile Include="Client\IIsBusyIndicator.cs" />
     <Compile Include="Client\ObjectCacheExtensions.cs" />
+    <Compile Include="Client\QueryDelegate.T1.cs" />
+    <Compile Include="Client\QueryDelegate.T2.cs" />
     <Compile Include="Server\CompositeConnection.cs" />
     <Compile Include="Server\IMessagePipeline.cs" />
     <Compile Include="Server\IProgressReporter.cs" />
