--- a/Messaging.TestEngine/02.Messaging.TestEngine.csproj
+++ b/Messaging.TestEngine/02.Messaging.TestEngine.csproj
@@ -58,7 +58,7 @@
     </Compile>
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IUnitTestFramework.cs" />
-    <Compile Include="MessageTester.cs" />
+    <Compile Include="RequestMessageTester.cs" />
     <Compile Include="Server\BooleanOperandExtensions.cs" />
     <Compile Include="Server\ConjunctionStatement.T1.cs" />
     <Compile Include="Resources\ExceptionMessages.Designer.cs">
