--- a/Messaging/04.Messaging.csproj
+++ b/Messaging/04.Messaging.csproj
@@ -63,6 +63,10 @@
     <Compile Include="Client\ObjectCacheExtensions.cs" />
     <Compile Include="Client\QueryDelegate.T1.cs" />
     <Compile Include="Client\QueryDelegate.T2.cs" />
+    <Compile Include="IRequestMessage.cs" />
+    <Compile Include="Message.cs" />
+    <Compile Include="RequestMessageProperty.cs" />
+    <Compile Include="RequestMessagePropertyAttribute.cs" />
     <Compile Include="Server\CompositeConnection.cs" />
     <Compile Include="Server\IMessagePipeline.cs" />
     <Compile Include="Client\EventMonitor.cs" />
@@ -80,7 +84,7 @@
     <Compile Include="InvalidMessageException.cs" />
     <Compile Include="Client\IQueryDispatcher.T1.cs" />
     <Compile Include="Client\IRequestDispatcher.cs" />
-    <Compile Include="Client\MessageStateTracker.cs" />
+    <Compile Include="Client\RequestMessageStateTracker.cs" />
     <Compile Include="Client\QueryDispatcher.T1.cs" />
     <Compile Include="Client\QueryDispatcher.T2.cs" />
     <Compile Include="Client\QueryDispatcherBase.T1.cs" />
@@ -139,11 +143,11 @@
     <Compile Include="IHasChangesIndicator.cs" />
     <Compile Include="IIsValidIndicator.cs" />
     <Compile Include="IMessage.cs" />
-    <Compile Include="Message.cs" />
-    <Compile Include="MessageChangedOptions.cs" />
-    <Compile Include="MessageErrorInfo.cs" />
-    <Compile Include="MessageValidationAttribute.cs" />
-    <Compile Include="MessagePropertyLabelCollection.cs" />
+    <Compile Include="RequestMessage.cs" />
+    <Compile Include="PropertyChangedOption.cs" />
+    <Compile Include="RequestMessageErrorInfo.cs" />
+    <Compile Include="RequestMessageValidationAttribute.cs" />
+    <Compile Include="RequestMessagePropertyLabelCollection.cs" />
     <Compile Include="NullMessage.cs" />
     <Compile Include="PropertyChangedBase.cs" />
     <Compile Include="Server\UnitOfWorkCache.cs" />
