--- a/Messaging.Client.Tests/01.Messaging.Client.Tests.csproj
+++ b/Messaging.Client.Tests/01.Messaging.Client.Tests.csproj
@@ -67,9 +67,9 @@
     <Compile Include="Properties\AssemblyInfo.project.cs" />
     <Compile Include="Client\ClientEventBusStub.cs" />
     <Compile Include="Client\ClientEventBusTest.cs" />
-    <Compile Include="Client\CompositeHasChangesIndicatorTest.cs" />
-    <Compile Include="Client\CompositeIsBusyIndicatorTest.cs" />
-    <Compile Include="Client\CompositeIsValidIndicatorTest.cs" />
+    <Compile Include="Client\HasChangesIndicatorTest.cs" />
+    <Compile Include="Client\IsBusyIndicatorTest.cs" />
+    <Compile Include="Client\IsValidIndicatorTest.cs" />
     <Compile Include="Client\HasChangesIndicatorStub.cs" />
     <Compile Include="Client\IsBusyIndicatorStub.cs" />
     <Compile Include="Client\IsValidIndicatorStub.cs" />
