--- a/Messaging/04.Messaging.csproj
+++ b/Messaging/04.Messaging.csproj
@@ -59,7 +59,7 @@
     <Compile Include="Client\CommandDelegate.cs" />
     <Compile Include="Client\CommandExecutionTask.cs" />
     <Compile Include="Client\IAsyncExecutionTask.cs" />
-    <Compile Include="Client\IIsBusyIndicator.cs" />
+    <Compile Include="Client\INotifyIsBusy.cs" />
     <Compile Include="Client\ObjectCacheExtensions.cs" />
     <Compile Include="Client\QueryDelegate.T1.cs" />
     <Compile Include="Client\QueryDelegate.T2.cs" />
@@ -144,8 +144,8 @@
     <Compile Include="Server\IScopeSpecificCacheEntry.T1.cs" />
     <Compile Include="Server\IDomainEventBus.cs" />
     <Compile Include="IAsyncValidationService.cs" />
-    <Compile Include="IHasChangesIndicator.cs" />
-    <Compile Include="IIsValidIndicator.cs" />
+    <Compile Include="INotifyHasChanges.cs" />
+    <Compile Include="INotifyIsValid.cs" />
     <Compile Include="IMessage.cs" />
     <Compile Include="RequestMessage.cs" />
     <Compile Include="PropertyChangedOption.cs" />
