- Added support for child-collection on RequestMessages. - Did some slight refactoring.

--- a/Messaging.Tests/03.Messaging.Tests.csproj
+++ b/Messaging.Tests/03.Messaging.Tests.csproj
@@ -77,6 +77,7 @@
     <Compile Include="MessageTwo.cs" />
     <Compile Include="ClockTest.cs" />
     <Compile Include="ClockWithOffsetTest.cs" />
+    <Compile Include="MessageWithChildCollectionsTest.cs" />
     <Compile Include="MessageWithChildMessageTest.cs" />
     <Compile Include="Server\MessageHandlerSpy.cs" />
     <Compile Include="Server\MessageProcessorBusTest.cs" />
