- Implemented first part of IEditableObject in RequestMessage.

--- a/Messaging/04.Messaging.csproj
+++ b/Messaging/04.Messaging.csproj
@@ -64,8 +64,10 @@
     <Compile Include="Client\QueryDelegate.T1.cs" />
     <Compile Include="Client\QueryDelegate.T2.cs" />
     <Compile Include="IRequestMessage.cs" />
+    <Compile Include="ITransactionalScope.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="ObservableCollectionWrapper.T1.cs" />
+    <Compile Include="RequestMessageEditScope.cs" />
     <Compile Include="RequestMessageProperty.cs" />
     <Compile Include="RequestMessagePropertyAttribute.cs" />
     <Compile Include="Resources\ValidationMessages.Designer.cs">
