--- a/Messaging.Client/02.Messaging.Client.csproj
+++ b/Messaging.Client/02.Messaging.Client.csproj
@@ -48,7 +48,7 @@
     <Compile Include="..\AssemblyInfo.solution.cs">
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
-    <Compile Include="Client\AsyncCommand.cs" />
+    <Compile Include="Client\ClientCommand.cs" />
     <Compile Include="Client\AsyncExecutionTaskStartedEventArgs.cs" />
     <Compile Include="Client\DataVirtualization\CountLoadedEventArgs.cs" />
     <Compile Include="Client\DataVirtualization\IndexSet.cs" />
@@ -64,8 +64,8 @@
     <Compile Include="Properties\AssemblyInfo.project.cs" />
     <Compile Include="Client\ClientEventBus.cs" />
     <Compile Include="Client\ClientEventBusConnection.cs" />
-    <Compile Include="Client\AsyncCommand.T1.cs" />
-    <Compile Include="Client\AsyncCommandOptions.cs" />
+    <Compile Include="Client\ClientCommand.T1.cs" />
+    <Compile Include="Client\ClientCommandOptions.cs" />
     <Compile Include="Client\HasChangesIndicator.cs" />
     <Compile Include="Client\IsBusyIndicator.cs" />
     <Compile Include="Client\IsValidIndicator.cs" />
