--- a/Messaging.Unity/02.Messaging.Unity.csproj
+++ b/Messaging.Unity/02.Messaging.Unity.csproj
@@ -65,6 +65,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Messaging.TestEngine\02.Messaging.TestEngine.csproj">
+      <Project>{fa31c09f-6319-484b-96ec-88bf3c3fdb81}</Project>
+      <Name>02.Messaging.TestEngine</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Messaging\04.Messaging.csproj">
       <Project>{757d77d3-7b32-4f21-9617-88274d50b517}</Project>
       <Name>04.Messaging</Name>
