--- a/Messaging.Client/02.Messaging.Client.nuspec
+++ b/Messaging.Client/02.Messaging.Client.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package >
   <metadata>    
-    <id>System.ComponentModel.Client</id>   
+    <id>System.ComponentModel.Messaging.Client</id>   
     <version>$version$</version>
     <title>$title$</title>
     <authors>$author$</authors>
