--- a/Messaging.TestEngine/02.Messaging.TestEngine.nuspec
+++ b/Messaging.TestEngine/02.Messaging.TestEngine.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package >
   <metadata>   
-    <id>System.ComponentModel.TestEngine</id>
+    <id>System.ComponentModel.Messaging.TestEngine</id>
     <version>$version$</version>
     <title>$title$</title>
     <authors>$author$</authors>
