--- a/Messaging.Unity/02.Messaging.Unity.nuspec
+++ b/Messaging.Unity/02.Messaging.Unity.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package >
   <metadata>    
-    <id>System.ComponentModel.Unity</id>    
+    <id>System.ComponentModel.Messaging.Unity</id>    
     <version>$version$</version>
     <title>$title$</title>
     <authors>$author$</authors>    
