--- a/Messaging/04.Messaging.nuspec
+++ b/Messaging/04.Messaging.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <metadata>    	
-	<id>System.ComponentModel</id>
+	<id>System.ComponentModel.Messaging</id>
     <version>$version$</version>
     <title>$title$</title>
     <authors>$author$</authors>
