- Separated Validator from RequestMessage and made it Serializable such that RequestMessages can be used with a DataContractSerializer (which doesn't call constructors).

--- a/Messaging/04.Messaging.csproj
+++ b/Messaging/04.Messaging.csproj
@@ -71,6 +71,7 @@
     <Compile Include="RequestMessageProperty.cs" />
     <Compile Include="RequestMessagePropertyAttribute.cs" />
     <Compile Include="RequestMessagePropertyChangedEventArgs.cs" />
+    <Compile Include="RequestMessageValidator.cs" />
     <Compile Include="Resources\ValidationMessages.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
