--- a/Messaging.Client.Tests/01.Messaging.Client.Tests.csproj
+++ b/Messaging.Client.Tests/01.Messaging.Client.Tests.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Runtime.Caching" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Transactions" />
   </ItemGroup>
   <Choose>
