- Performed a large refactoring to introduce message validation within the MessageProcessor. - Added the possibility to create a message handler pipeline through a generic Decorate() method.

--- a/Messaging.TestEngine.Tests/01.Messaging.TestEngine.Tests.csproj
+++ b/Messaging.TestEngine.Tests/01.Messaging.TestEngine.Tests.csproj
@@ -74,6 +74,7 @@
     <Compile Include="MSTestFramework.cs" />
     <Compile Include="Server\BooleanOperandExtensionsTest.cs" />
     <Compile Include="Server\ComparableOperandExtensionsTest.cs" />
+    <Compile Include="Server\DomainEvent.cs" />
     <Compile Include="Server\NullableOperandExtensionsTest.cs" />
     <Compile Include="Server\OperandTest.cs" />
     <Compile Include="Properties\AssemblyInfo.project.cs" />
