--- a/Messaging.Unity.Tests/01.Messaging.Unity.Tests.csproj
+++ b/Messaging.Unity.Tests/01.Messaging.Unity.Tests.csproj
@@ -48,6 +48,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <Choose>
